--- a/index.html
+++ b/index.html
@@ -8,67 +8,47 @@
 </head>
 <base target="_blank">
 <body>
-	<div class="content">
-		<div class="content-left">
-			<div class="photo">
-				<a href="https://github.com/PaddyWang">
-					<img src="https://avatars0.githubusercontent.com/u/17067189?v=3&amp;s=460">
-					<span>PaddyWang</span>
-				</a>
-			</div>
-			<div class="info">
-				<table>
-					<tr>
-						<td>职 位：</td>
-						<td>前端开发工程师</td>
-					</tr>
-					<tr>
-						<td>邮 箱：</td>
-						<td>paddywang333@163.com</td>
-					</tr>
-					<tr>
-						<td>邮 箱：</td>
-						<td>paddywang333@gmail.com</td>
-					</tr>
-					<tr>
-						<td>签 名：</td>
-						<td>用界面驱动你的欲望</td>
-					</tr>
-					<tr>
-						<td>简 介：</td>
-						<td><a href="http://paddywang.github.io/about/">个人简历</a></td>
-					</tr>
-					<tr>
-						<td>累 计：</td>
-						<td id="count">0</td>
-					</tr>
-					<tr>
-						<td>&nbsp;</td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>&gt;&gt;&gt;</td>
-						<td>欢迎前来交流前端技术</td>
-					</tr>					
-				</table>
-			</div>
-		</div>
-		<div class="content-right">
-			<h3>demo &gt;&gt;&gt;</h3>
-			<div class="list">
-				<a href="./list/flappyBird/">疯狂的小鸟</a>
-				<a href="./list/snake.html">贪吃蛇</a>
-				<a href="./list/canvas-image/images-change.html">canvas-好玩的图像处理</a>
-				<a href="./list/canvas-image/01file-image.html">01上传控件获取用户选定的头像</a>
-				<a href="./list/canvas-image/02.html">02基于状态机制实现拖拽方块</a>
-				<a href="./list/canvas-image/03.html">03头像剪切</a>
-				<a href="./list/canvas-image/04.html">04头像剪切补充</a>
+    <section class="box">
+        <nav>
+            <a class="photo" href="https://github.com/PaddyWang">
+                <img src="https://avatars0.githubusercontent.com/u/17067189?v=3&amp;s=460">
+            </a>
+            <a href="http://paddywang.github.io/about/">Readme</a>
+            <a href="http://paddywang.github.io/">Blog</a>
+        </nav>
+        <section class="content">
+            <a href="./list/flappyBird/">疯狂的小鸟</a>
+            <a href="./list/snake.html">贪吃蛇</a>
+            <a href="./list/canvas-image/images-change.html">canvas-好玩的图像处理</a>
+            <a href="./list/canvas-image/01file-image.html">01上传控件获取用户选定的头像</a>
+            <a href="./list/canvas-image/02.html">02基于状态机制实现拖拽方块</a>
+            <a href="./list/canvas-image/03.html">03头像剪切</a>
+            <a href="./list/canvas-image/04.html">04头像剪切补充</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+        </section>
+    </section>
+	<script src="./js/canvas-background.js"></script>
+	<script>
+		(function(){
+            var baseW = 1920;
+            var canvasBackgroundInstance = new CanvasBackground(initConfig());
 
-			</div>
-		</div>
-	</div>
-	<script src="./js/paddy-03.js"></script>
-	<script src="./js/select.js"></script>
-	<script src="./js/index.js"></script>
+            window.onresize = function(){
+                canvasBackgroundInstance.reset(initConfig());
+            };
+
+            function initConfig(){
+                var fontSize = window.innerWidth / baseW * 32;
+                var xGap = window.innerWidth / baseW * 200;
+                var yGap = window.innerWidth / baseW * 200;
+                return {
+                    fontSize: fontSize > 16 ? fontSize : 16,
+                    angle: -35,
+                    xGap: xGap > 80 ? xGap : 80,
+                    yGap: yGap > 80 ? yGap : 80
+                };
+            }
+        }());
+	</script>
 </body>
 </html>
