--- a/index.html
+++ b/index.html
@@ -25,6 +25,23 @@
             <a href="./list/canvas-image/03.html">03头像剪切</a>
             <a href="./list/canvas-image/04.html">04头像剪切补充</a>
             <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
+            <a href="./list/canvas/background.html">水印背景</a>
         </section>
     </section>
 	<script src="./js/canvas-background.js"></script>
